[package]
name = "gen-proto"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.10"
bytes = "0.5"
protobuf-codegen-pure = "2.10"
